<resources>
    <string name="app_name">QuizFlag_Prueba_2P</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">
        One region must be selected. Setting Europe as the default region.
    </string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">Europe</string>
    <string name="title_activity_settings">Settings</string>
    <string name="txt_login">Ingreso al juego</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_passwd">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_registro">Registrarse</string>
    <string name="txt_registro_nuevo">Nuevo usuario</string>
    <string name="txt_nuevo_usuario">Nombre de usuario</string>
    <string name="txt_nuevo_passwd">Contraseña</string>
    <string name="btn_nuevo_usuario">Guardar</string>
</resources>
